--- a/semana 8/convolución.ipynb
+++ b/semana 8/convolución.ipynb
@@ -3,9 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyPKGca8JPiHF5Y5pzKrhgIT",
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "name": "python3",
@@ -17,16 +15,6 @@
   },
   "cells": [
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/juancarlostarazona01/Talento_Tech/blob/main/convoluci%C3%B3n.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
       "cell_type": "code",
       "execution_count": 3,
       "metadata": {
@@ -34,7 +22,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "UahtI52WfSZo",
-        "outputId": "4f97819d-9b9f-48b2-980c-00a834d9b9d0"
+        "outputId": "a930b97c-529d-4e79-8ed9-14d92013940a"
       },
       "outputs": [
         {
@@ -54,6 +42,129 @@
         "\n",
         "y = np.convolve(h, x)\n",
         "print(y)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "h1 = h[0]\n",
+        "h2 = h[1]\n",
+        "h3 = h[2]\n",
+        "h4 = h[3]\n",
+        "h5 = h[4]\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ZPmsUqoKrY81",
+        "outputId": "dd4ea9f8-9d27-4203-e9a0-83b27bb82040"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "-1"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 9
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x1 = [x*h1 for x in x]\n",
+        "x2 = [x*h2 for x in x]\n",
+        "x3 = [x*h3 for x in x]\n",
+        "x4 = [x*h4 for x in x]\n",
+        "x5 = [x*h5 for x in x]\n",
+        "print(x1)\n",
+        "print(x2)\n",
+        "print(x3)\n",
+        "print(x4)\n",
+        "print(x5)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "VRv62hjkskXy",
+        "outputId": "590c5575-f608-4870-91b2-7b57fb118459"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[-1, -2, -3, -4, -5]\n",
+            "[5, 10, 15, 20, 25]\n",
+            "[3, 6, 9, 12, 15]\n",
+            "[-2, -4, -6, -8, -10]\n",
+            "[1, 2, 3, 4, 5]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = [1, 2, 3, 4, 5]\n",
+        "h = [-1, 5, 3, -2, 1]"
+      ],
+      "metadata": {
+        "id": "k9fEdsGxtQOi"
+      },
+      "execution_count": 23,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Hecho enm chatGPT con el prompt \"como aplico convolución de forma manual para un x y un h de 5 datos cada uno\"\n",
+        "\n",
+        "def convolucion_manual(x, h):\n",
+        "    N = len(x)\n",
+        "    M = len(h)\n",
+        "\n",
+        "    # Tamaño de la señal resultante\n",
+        "    tamaño_salida = N + M - 1\n",
+        "\n",
+        "    # Inicializar la salida con ceros\n",
+        "    salida = [0] * tamaño_salida\n",
+        "\n",
+        "    # Calcular la convolución\n",
+        "    for n in range(tamaño_salida):\n",
+        "        for k in range(N):\n",
+        "            if 0 <= n - k < M:\n",
+        "                salida[n] += x[k] * h[n - k]\n",
+        "\n",
+        "    return salida\n",
+        "\n",
+        "# Aplicar la convolución\n",
+        "resultado = convolucion_manual(x, h)\n",
+        "print(resultado)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "CNuiNFcpw_PU",
+        "outputId": "2a21cf87-a72a-48fd-e141-5f07f0c46bf8"
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[-1, 3, 10, 15, 21, 33, 10, -6, 5]\n"
+          ]
+        }
       ]
     }
   ]
